# testgen-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PROMPT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/testgen/: __init__.py  cli.py  config.py
src/testgen/exporters/: json_exporter.py  markdown_exporter.py  pdf_exporter.py  xlsx_exporter.py
src/testgen/generator/: llm_client.py  prompts.py  techniques.py  test_case_generator.py
src/testgen/parser/: file_parser.py  text_parser.py
src/testgen/web/: app.py
src/testgen/web/templates/: base.html  index.html  results.html  results_page.html
src/testgen/web/templates/partials/: test_cases_table.html
tests/: conftest.py  test_api.py  test_exporters.py  test_generator.py  test_techniques.py  test_text_parser.py
tests/fixtures/: sample_requirements.txt  sample_user_stories.md
